2008-08-11  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug 547300 – links are yellow

	* libgdict/gdict-defbox.c:
	(gdict_defbox_init_tags): Do not use a pointer to a
	GdkColor pointer, unless you want garbage to be used
	as a color. (Benjamin Berg, Andreas Nilsson)

	(gdict_defbox_style_set): Update the colors when the
	style changes.

2007-10-23  Stéphane Loeuillet  <sloeuille@svn.gnome.org>

	* data/gnome-dictionary.desktop.in.in: Trivial fix to .desktop file
	to conform to latest fd.o .desktop specs.
	Spoted by desktop-file-validate. Fixes #481721

2007-09-18  Emmanuele Bassi  <ebassi@gnome.org>

	* data/GNOME_DictionaryApplet.server.in.in: Fix the name of the
	icon that should be used by the applet (#477960)

2007-09-09  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-source-chooser.c: Display the current source
	in bold inside the source chooser widget.

	* libgdict/gdict-strategy-chooser.[ch]: Fix a typo in the API;
	implement the missing methods of the strategy chooser widget;
	display the current strategy in bold.

	* libgdict/gdict-database-chooser.c: Display the current database
	in bold inside the source chooser widget.

	* src/gdict-window.c: Rework how the sources and contexts are
	loaded when constructing a new GdictWindow; do not update the
	statusbar if it's not visible.

2007-09-06  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/Makefile.am: Install gdict-source-loader.h.

2007-09-06  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-source-loader.c:
	(gdict_source_loader_has_source): Reload the sources if the
	loader has the dirty bit set.

2007-09-04  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c: Make sure that the word to match is not
	empty when disptaching the speller widget.

2007-09-04  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-strategy-chooser.c: Rename some symbols to work
	around libtool and ld braindeadness on OSX. (#425120)

2007-09-03  Emmanuele Bassi  <ebassi@gnome.org>
