@@ -1,4 +1,10 @@
-2008-08-11  Emmanuele Bassi  <ebassi@openedhand.com>
+2008-08-11  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* src/gdict-window.c (gdict_window_ensure_menu_state): Fix a warning
+	when ensure_state() is being called without a UIManager or
+	without the full menu built.
+
+2008-08-11  Emmanuele Bassi  <ebassi@gnome.org>
 
 	Bug 547300 – links are yellow
 
